src/test/ui/issues/issue-20605.stderr
error[E0277]: `dyn Iterator<Item = &'a mut u8>` cannot be converted to an iterator
  --> $DIR/issue-20605.rs:2:17
   |
LL |     for item in *things { *item = 0 }
   |                 ^^^^^^^ `dyn Iterator<Item = &'a mut u8>` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `dyn Iterator<Item = &'a mut u8>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
